# mini-langgraph

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
dockerfiles/: Dockerfile
pkg/agent/: _base.py  planner.py  replanner.py  tool_react.py
pkg/flow/: factory.py  plan_and_executor.py  react.py
pkg/prompt/: __init__.py  _replanner_prompt.py
